--- a/src/all.module.css
+++ b/src/all.module.css
@@ -2490,6 +2490,7 @@ input[type=range]::-ms-thumb {margin-top: 1px;height: 25px;width: 25px;border-ra
 .biz .AccountInfo {background: linear-gradient(0deg, #D2CDF9 80%, #ffffff 100%); border: 4px solid; border-color: #D2CDF9; border-radius: 20px !important;}
 .dark .AccountInfo {background-color: #000000; border-color: #aa9cfe;box-shadow: 1px 1px 2px 1px rgb(0 0 0 / 32%);-webkit-box-shadow: 1px 1px 2px 1px rgb(0 0 0 / 32%);-moz-box-shadow: 1px 1px 2px 1px rgb(0 0 0 / 32%);}
 .sepia .AccountInfo {background-color: #eee8d59c; border-color: #d9d2c2a3;}
+.matrix .AccountInfo {background-color: transparent; border: 1px solid #008F11;}
 
 
 /* Others Components */
@@ -2656,6 +2657,8 @@ input[type=range]::-ms-thumb {margin-top: 1px;height: 25px;width: 25px;border-ra
 .matrix .SettingBLabRegular input {background-color: #008F11; color: #000;}
 .matrix .SettingBLabRegular input::placeholder {color: #000;}
 .matrix .ActionAWeb3Button {background-color: #008F11; color: #000;}
+.matrix .CardsFancy {background-color: transparent; color: #008F11; border: 1px solid #008F11; box-shadow: none; border-radius: 0;}
+
 
 @media only screen and (max-width: 1200px) {
   .light .Header .BlurHeader {background: linear-gradient(-130deg,#c1befc4d,#fdf7f515 80%);}
