--- a/src/all.module.css
+++ b/src/all.module.css
@@ -1430,6 +1430,9 @@ input[type=range]::-ms-thumb {margin-top: 1px;height: 25px;width: 25px;border-ra
  .NothingToSee {padding: 15px;}
  .NothingToSee h4 {font-size: 12px;}
 
+ .WrapBoxItem {width: 95% !important; margin: 0px auto;}
+ .UnwrapBoxItem {width: 95% !important; margin: 10px auto;}
+
  .CollectionRight .FarmContentTitle figure {width: 50px; height: 50px;}
  .CollectionRight .FarmContentTitle figure img {width: 50px; height: 50px;}
  .CollectionRight .FarmContentInfo .VersionFarm, .CollectionRight .FarmContentInfo .MetaBTN, .CollectionRight .FarmContentInfo .CopyBTN, .CollectionRight .FarmContentInfo .FarmActivityA {margin: 2px;}
